--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "mongodb": "4.1",
     "mongoose": "^7.0.3",
     "passport-google-oauth2": "^0.2.0"
   },
